# pdfXml

./: .gitignore  ANNOTATION_SUPPORT.md  Cargo.toml  INSTALL_AND_PUBLISH_STATUS.md  README.md  SDK_GUIDE.md  b4.txt  build2.txt  build3.txt  build_log.txt  inspect_annots.rs  page_annots_dump.txt  run2.txt  run_log.txt  run_vs_all_tests.cmd  run_vs_package.cmd  run_vs_tests.cmd
.cargo/: config.toml
.claude/: settings.local.json
.workbuddy/memory/: 2026-04-06.md
cli/: Cargo.toml  README.md
cli/src/: main.rs
examples/: exported.xfdf  index.xml  minimal.xfdf  sample.xfdf
src/: annotation.rs  error.rs  lib.rs  main.rs  pdf.rs  xfdf.rs
tests/: integration_test.rs
