[package]
name = "pdfxml"
version = "0.1.0"
edition = "2021"
description = "将 XFDF/XML 注释导出为 PDF 文件"

[dependencies]
# XML 解析
quick-xml = "0.36"
# PDF 生成和操作
lopdf = "0.35"
# 日期时间处理
chrono = { version = "0.4", features = ["serde"] }
# 错误处理
anyhow = "1.0"
thiserror = "2.0"
# 日志
log = "0.4"
env_logger = "0.11"
# 命令行参数解析
clap = { version = "4.5", features = ["derive"] }
# 正则表达式（用于解析日期等）
regex = "1"
# 序列化支持（用于数据结构）
serde = { version = "1.0", features = ["derive"] }
# TrueType 轮廓解析（用于稳定绘制 FreeText AP）
ttf-parser = "0.21"

[[bin]]
name = "pdfxml"
path = "src/main.rs"
