[package]
name = "pdfxml"
version = "0.1.0"
edition = "2021"
description = "将 XFDF/XML 注释导出为 PDF 文件或作为 Rust SDK 调用"
license = "MIT"
readme = "README.md"
repository = "https://github.com/hearsay316/pdfXml.git"
homepage = "https://github.com/hearsay316/pdfXml.git"
documentation = "https://docs.rs/pdfxml"
keywords = ["pdf", "xfdf", "annotation"]
categories = ["parser-implementations"]
include = [
    "Cargo.toml",
    "Cargo.lock",
    "README.md",
    "SDK_GUIDE.md",
    "ANNOTATION_SUPPORT.md",
    "src/**/*.rs",
    "tests/**/*.rs",
    "examples/**/*.xfdf",
    "examples/**/*.xml",
    "examples/**/*.pdf",
    ".cargo/config.toml"
]

[workspace]
members = [".", "cli"]

[dependencies]
# XML 解析
quick-xml = "0.36"
# PDF 生成和操作
lopdf = "0.35"
# 日期时间处理
chrono = { version = "0.4", features = ["serde"] }
# 错误处理
thiserror = "2.0"
# 日志
log = "0.4"
# 正则表达式（用于解析日期等）
regex = "1"
# 序列化支持（用于数据结构）
serde = { version = "1.0", features = ["derive"] }
# TrueType 轮廓解析（用于稳定绘制 FreeText AP）
ttf-parser = "0.21"
base64 = "0.22"
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }

[dev-dependencies]
tempfile = "3"
base64 = "0.22"
image = { version = "0.25", default-features = false, features = ["png"] }
