[package]
name = "pdfxml-cli"
version = "0.1.0"
edition = "2021"
description = "pdfxml command-line interface"
license = "MIT"
repository = "https://github.com/hearsay316/pdfXml.git"
homepage = "https://github.com/hearsay316/pdfXml.git"
documentation = "https://docs.rs/pdfxml-cli"
keywords = ["pdf", "xfdf", "cli"]
categories = ["command-line-utilities"]
include = [
    "Cargo.toml",
    "src/**/*.rs"
]

[dependencies]
pdfxml = { path = "..", version = "0.1.0" }
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
log = "0.4"
env_logger = "0.11"
windows-sys = { version = "0.59", features = ["Win32_System_Console"] }

[[bin]]
name = "pdfxml"
path = "src/main.rs"
